# RetinoSim

./: .gitignore  LICENSE  README.md
data/: gui_out.avi  gui_out_blended.avi  gui_out_events.mat  roompan_events.avi
src/c++/RetinaNvsModel/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  WebCam  cmake_install.cmake  main.cpp
src/cpp/: CMakeLists.txt  WebCam  main.cpp
src/matlab/app/: RetinoSim.mlapp  RetinoSimGUI.m
src/matlab/aux/: GenNoiseEvents.m
src/matlab/dbg_scripts/: params_bandpass_small_var.mat  params_linear_small_var.mat  params_log_dataset_match.mat  params_log_small_var.mat  params_loglowpass_small_var.mat  params_lowpass_small_var.mat  sim_notes.m  test_RetinoSim_ShotNoise.m  test_RetinoSim_basic.asv  test_RetinoSim_basic.m  test_RetinoSim_w_dataset.m
src/matlab/demo/: demo_RetinoSim.m
src/matlab/io/: loadAEFile.m  makeFrames.m  plotRetinoOutput.m  readVideo_c.m  readVideo_rs.m  readcsv.m  videoBlend.m  writeOutputVideo.m
src/matlab/modeling/: AmacrineSpread.m  AmacrineUpdate.m  AmacrineUpdateGaussian.m  CharacterizeRetina.m  CreateStimulus.m  GenerateRetinaStimulii.m  IdealRetina1D.m  NormalizeContrast.m  ObjectMotionSensitiveGC.m  RetinaNvsModel.m  RetinaNvsModelBck.m  RetinaNvsModel_shotNoise.m  RetinoSim.asv  RetinoSim.m  SRAneuron.m  StNvsModel.m  StNvsModel_shotNoise.m  mSRAneuron.m  spikeGeneration.m
src/matlab/test/: CreateStimulusLive.mlx  test_CreateStimulus.m  test_Gait2Events_genscript0.m  test_Gait2Events_genscript0.m~  test_crop.m  (+13 more)
src/python/: retina_models.py
(+14 files in other folders)
